--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
  
     }
 .vegangood{
+  display:flex;
   width: 1920px;
   height: 1080px;
   background-color: green;
@@ -172,12 +173,6 @@ h2{
         </div>
       </div>    
     </div>
-
-
-   
-
-
-
     <div id="menu"class="menu">
       
       </div>
@@ -237,13 +232,25 @@ h2{
   
     </div>
    <div id="vegan"class="vegangood">
+     <div class="aa"></div>
+     <div class="bb"></div>
+     <div class="cc"></div>
+     
     </div>
+
+
    <div id="contactme"class="contact">
      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7280.731469849312!2d120.67890700000001!3d24.158903!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d635d5a89eb%3A0x5e0ad3fd6ef8f70f!2zNDA05Y-w54Gj5Y-w5Lit5biC5YyX5Y2A5aSn5b636KGXODTlt7cxLTPomZ8!5e0!3m2!1szh-TW!2sus!4v1599660950835!5m2!1szh-TW!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
    </div>
+
+
+
  <div id="footer" class="footer">
   <h2>版權所有懷特廚房White Kitchen 素食無國界料理 </h2>
  </div>
+
+
+
 
 
  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
