--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <link rel="stylesheet" href="CSS/mneuunder.css">
    <link rel="stylesheet" href="CSS/aboutme.css">
    <link rel="stylesheet" href="CSS/nav.css">
+   <link rel="stylesheet" href="CSS/Earth.css">
+   
    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <style>
       
@@ -53,9 +55,10 @@ h2{
   margin: 0;
   
 }
-.containt{
-  width: 1920px;
-  height: 1020px;
+
+h1{
+  margin:0;
+color:#fff
 }
     </style>
 </head>
@@ -129,6 +132,7 @@ h2{
               <div id="aboutme" class="aboutme">
                 <div class="aa"></div>
                   <div class="bb">
+                    <h1>用餐環境</h1>
               <div class="bba">
                <div class="swiper-container">
                  <div class="swiper-wrapper">
@@ -148,7 +152,6 @@ h2{
                <div class="swiper-button-next"></div>
                <div class="swiper-button-prev"></div>
              </div>
-             <h1>用餐環境</h1>
               </div>
               <div class="bbc">
                <h1>《用心料理每一份餐點》</h1>
@@ -238,11 +241,13 @@ h2{
      
     </div>
 
-
-   <div id="contactme"class="contact">
+    <div id="aboutme" class="aboutme">
+  <div id="imga"class="aa"></div>
+ <div id="contactme"class="bb">
      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7280.731469849312!2d120.67890700000001!3d24.158903!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d635d5a89eb%3A0x5e0ad3fd6ef8f70f!2zNDA05Y-w54Gj5Y-w5Lit5biC5YyX5Y2A5aSn5b636KGXODTlt7cxLTPomZ8!5e0!3m2!1szh-TW!2sus!4v1599660950835!5m2!1szh-TW!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
    </div>
-
+<div class="cc"></div>
+    </div>
 
 
  <div id="footer" class="footer">
